@@ -13,9 +13,10 @@ name: Term-Menus
 provides:
   Term::Menus:
     file: lib/Term/Menus.pm
-    version: 1.52
+    version: 1.53
 requires:
+  Module::Load::Conditional: 0
   Term::ReadKey: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 1.52
+version: 1.53
