@@ -1,3 +1,12 @@
+2010-09-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.53 released.
+
+        * Added requires Module::Load::Conditional to
+          Makefile.PL in attempt to clean up CPAN
+          testers reports.
+
+
 2010-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.52 released.
